# WES2026_hack

./: .gitignore  README.md
.cache/clangd/index/: Audio_play.c.4088D97821CD4B65.idx  Audio_play.h.EF5F40DE6C2F855F.idx  app_main.c.629EF1B1EE65AE80.idx  audio_utils.c.45A433353FDA3A46.idx  audio_utils.h.53DA5C683D5B37DE.idx  disp_driver.c.B2AE1DAF6F3C00A9.idx  disp_driver.h.6FE8891DD3D41BF1.idx  disp_spi.c.9C3E4E857C3E5446.idx  disp_spi.h.DCCD966AD4158B66.idx  gifdec.c.9B4616B15EA23AE5.idx  gifdec.h.5CB064E2CE03234B.idx  gui.c.0F5565628CCA8D78.idx  gui.h.981A3D6F333E562E.idx  ili9341.c.C76588E6B9D8D244.idx  ili9341.h.D9A64CD7EA9C8D28.idx  img_clothes.c.467B0A719C507624.idx  img_demo_widgets_avatar.c.4744D25D2D9FB14A.idx  img_lvgl_logo.c.A753C1A26CB00938.idx  lodepng.c.029F92BCCE08F0E0.idx  lodepng.h.8CD6E59222E11D05.idx  lv_anim.c.AD8C83B22FA106F5.idx  lv_anim.h.85B876B45FD08D62.idx  lv_anim_timeline.c.9EF19B71ADAE6BC5.idx  lv_anim_timeline.h.D557DD0EC23726C1.idx  lv_animimg.c.C706CBE8E6220021.idx  lv_animimg.h.3630572A7A5CDAB7.idx  lv_api_map.h.F4FE259E3EA23D10.idx  lv_arc.c.46375B45B3A50A1B.idx  lv_arc.h.A30B83C677F5CED6.idx  lv_area.c.624E744E52DE0A98.idx  (+347 more)
components/audio_utils/: CMakeLists.txt
components/button/: CMakeLists.txt
components/buzzer/: CMakeLists.txt
components/max98357/: CMakeLists.txt
components/udp_client/: CMakeLists.txt
components/ui_app/: ui_app.c  ui_app.h
main/: Audio_play.c  Audio_play.h  CMakeLists.txt  app_main.c  button.c  button.h  buzzer.c  buzzer.h  gui.c  gui.h  tcp_helper.c  tcp_helper.h
server/: requirements.txt  server.py
(+25 files in other folders)
